# ocr-app

./: .gitignore  1.md  LICENSE  README.md  cargo-config.toml  main.py  pyproject.toml  skills-lock.json
.github/workflows/: build-arm64.yml
ocr-app/: Cross.toml  Dockerfile  Dockerfile.ci  build-arm64.sh  build-linux-arm64.sh  docker-compose.yml  pack-arm64.sh  package-lock.json  package.json
ocr-app/src/: App.css  App.tsx
ocr-app/src-tauri/: Cargo.toml  tauri.conf.json
ocr-app/src-tauri/src/: lib.rs  main.rs
ocr_service/: __init__.py  app.py  pipeline.py  postprocess.py  preprocess.py
ppocr-rs-local/: .cargo_vcs_info.json  .gitignore  Cargo.toml  Cargo.toml.orig  README.md
ppocr-rs-local/examples/: cell_aware_reorder.rs  ocr_pipeline.rs
ppocr-rs-local/src/: angle_net.rs  base_net.rs  cell_detection.rs  compat.rs  crnn_net.rs  db_net.rs  doc_unwarp.rs  formula_rec.rs  layout.rs  lib.rs  model_hub.rs  ocr_error.rs  ocr_lite.rs  ocr_result.rs  ocr_utils.rs  table_classifier.rs  table_structure.rs
scripts/: inspect_model.py  test_inference.py
tests/: __init__.py  test_api.py  test_det_process.py  test_pipeline.py  test_rec_process.py
