[project]
name = "ocr-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.1",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "onnxruntime>=1.27.0",
    "opencv-python-headless>=4.13.0.92",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
